# slitter

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
c/: cache.c  cache.h  constants.c  constants.h  mag.c  mag.h  map.c  map.h  span_metadata.c  span_metadata.h  stack.c  stack.h
doc/: design.md  fast_path.md
examples/: demo.c
include/: slitter.h
src/: cache.rs  class.rs  debug_allocation_map.rs  debug_arange_map.rs  debug_type_map.rs  file_backed_mapper.rs  individual.rs  lib.rs  linear_ref.rs  magazine.rs  magazine_impl.rs  magazine_stack.rs  map.rs  mapper.rs  mill.rs  press.rs  rack.rs
